# ip-allocator-webserver

./: Cargo.toml  Dockerfile  Dockerfile.fake-async  README.md  config.toml  docker-compose.yml  flake.nix  openapi.json
.github/workflows/: docker-build-push.yml  integration-tests.yml  nixos-test.yml  publish-rust-sdk.yml  subscriber-tutorial-test.yml
configs/: scenario_borrow_async_nonblocking.toml  scenario_borrow_sync.toml  scenario_return_async.toml
docs/: subscriber-guide.md
ip-allocator-client/: Cargo.toml  README.md  openapi.json
ip-allocator-client/examples/: basic.rs
ip-allocator-client/src/: lib.rs
nix/: README.md  module.nix
nix/examples/: basic.nix  flake-usage.nix  with-persistent-redis.nix  with-subscribers.nix
nix/examples/subscriber/: default.nix
nix/tests/: subscriber-tutorial-test.nix  vm-test.nix
scripts/: generate-subscriber.sh  run_all_tests.sh  test_borrow_async_nonblocking.sh  test_borrow_sync.sh  test_return_async.sh
src/: config.rs  error.rs  lib.rs  main.rs  ops.rs  store.rs  subscribers.rs
src/guards/: debug_header.rs  mod.rs  owner_id.rs
src/handlers/: admin.rs  ip.rs  mod.rs
static/: admin.html
tests/: integration_test.rs
