[package]
name = "ip-allocator-webserver"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
redis = "0.23.0"
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rocket_okapi = { version = "0.8.0", features = [ "swagger", "rapidoc" ] }
schemars = { version = "0.8" }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis"] }